
2021-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): skip initial "." when printing COB_EXE_EXT
	* cobc.c (process_command_line): postpone version output for --verbose
	* cobc.c (set_listing_date): use formatted instead of ANSI timestamp,
	  allow format to be specified at cobc compile-time via with define
	  LISTING_TIMESTAMP_FORMAT

2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_generic_register): handle CONSTANT
	* error.c (ambiguous_error): handling for internal definitions / registers
	* typeck.c (cb_build_generic_register), tree.h: optionally return
	  cob_field for register
	* cobc.c, cobc.h, reserved.c: code for ancient OSVS registers - disabled

2021-09-26  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (create_implicit_picture): PICTURE is mandatory
	  for report description entries with SOURCE or SUM clause

2021-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_const_length): ensure we actually have a valid
	  tree to build the length of, fixing #769 SIGSEGV with invalid code

2021-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, cobc.c: fix ODOSLIDE directive

2021-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_param_size), parser.y: new enum instead of single defines,
	  including new CB_SIZE_UNSET and partial addition CB_SIZE_16/CB_SIZE_32
	* tree.c (set_sign_and_size_from_parameter_field): extracted from
	  (output_call_protocast, output_call_by_value_args)
	* tree.c (get_size_parameter_type): extracted from (output_call_protocast,
	  output_call_by_value_args, try_get_by_value_parameter_type)

2021-09-21  Christian Lademann <christian@lademann.online>

	* typeck.c: accept 3-byte CRT STATUS;
	  accept numerical CRT STATUS with at least 4 digits

2021-09-20  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort, abort_if_too_many_continuation_lines,
	  cobc_tree_cast_error): use common diagnostic format for internal errors